Gradio demo v1 plus llama-cpp restapi streaming issue resolved

--- a/fastrag/notebooks/pdf_processor.ipynb
+++ b/fastrag/notebooks/pdf_processor.ipynb
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pymupdf4llm\n",
-    "# llama_reader = pymupdf4llm.LlamaMarkdownReader()\n",
-    "# llama_docs = llama_reader.load_data(input_pdf)"
+    "import pymupdf4llm\n",
+    "llama_reader = pymupdf4llm.LlamaMarkdownReader()\n",
+    "llama_docs = llama_reader.load_data(input_pdf)"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Add documents to the vector Index"
+    "### 3. Add documents to the vector Index"
    ]
   },
   {
@@ -197,6 +197,11 @@
     "for d in documents:\n",
     "    print(d.score)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
