Update fastrag package dependencies, gradio ui update and refines docker compose

--- a/fastrag/notebooks/gradio_demo.ipynb
+++ b/fastrag/notebooks/gradio_demo.ipynb
@@ -117,7 +117,6 @@
     "\n",
     "\n",
     "def call_chat_api(user_input):\n",
-    "    import requests\n",
     "    url = \"http://34.64.46.1:8090/chat\"\n",
     "    headers = {\n",
     "        \"accept\": \"application/json\",\n",
@@ -167,8 +166,8 @@
     "    # Header with a professional title and subtitle\n",
     "    gr.Markdown(\n",
     "        \"\"\"\n",
-    "        <h2 style=\"text-align: center; color: #3b3b3b;\">💬 FastRAG Chatbot</h2>\n",
-    "        <p style=\"text-align: center; color: #666;\">Upload any PDF and ask anything</p>\n",
+    "        <h1 style=\"text-align: center; color: #3b3b3b;\">💬 FastRAG Chatbot</h1>\n",
+    "        <h3 style=\"text-align: center; color: #666;\">Upload any PDF and ask anything</h3>\n",
     "        \"\"\",\n",
     "        elem_id=\"header\"\n",
     "    )\n",
@@ -260,19 +259,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import gradio as gr\n",
-    "import time\n",
-    "\n",
-    "\n",
-    "def echo(message, history):\n",
-    "    for m in message:\n",
-    "        time.sleep(1)\n",
-    "        yield m\n",
-    "\n",
-    "demo = gr.ChatInterface(fn=echo, type=\"messages\", examples=[\"hello\", \"hola\", \"merhaba\"], title=\"Echo Bot\")\n",
-    "demo.launch()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
