--- a/fastrag/notebooks/qdrant_sandbox.ipynb
+++ b/fastrag/notebooks/qdrant_sandbox.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qdrant_database = QdrantDatabase()"
+    "from qdrant_client import QdrantClient, models\n",
+    "\n",
+    "qdrant_database = QdrantDatabase(qdrant_url=\"http://0.0.0.0:6643\")\n"
    ]
   },
   {
@@ -151,7 +153,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "search_results[0]"
+    "import requests\n",
+    "import os\n",
+    "\n",
+    "url = os.getenv(\"CONVERSATION_HISTORY_URL\", \"http://localhost:8089/conversation-history\")\n",
+    "payload = {\n",
+    "    \"collection_name\": \"qna_collection\",\n",
+    "    \"limit\": 10\n",
+    "}\n",
+    "response = requests.post(url, params=payload)\n",
+    "print(response.json())\n",
+    "conversation_history = response.json()[\"response\"]"
    ]
   }
  ],
