Provides option to add conversation history

--- a/fastrag/notebooks/qdrant_sandbox.ipynb
+++ b/fastrag/notebooks/qdrant_sandbox.ipynb
@@ -154,6 +154,31 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "def add_conversation_history(query, response_text, collection_name:str=\"qna_collection\"):\n",
+    "    try:\n",
+    "        url = os.getenv(\"CONVERSATION_HISTORY_URL\", \"http://localhost:8089/conversation-history\")\n",
+    "        payload = {\n",
+    "            \"collection_name\": collection_name,\n",
+    "            \"query\": query,\n",
+    "            \"response_text\": response_text\n",
+    "        }\n",
+    "        response = requests.post(url, json=payload)\n",
+    "        print(response.json())\n",
+    "        \n",
+    "    except Exception as err:\n",
+    "        print(f\"Failed to add to conversation history: {err}\")\n",
+    "        return []    \n",
+    "    \n",
+    "add_conversation_history(\"are you working?\", \"Lets sleep now\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
     "import os\n",
     "\n",
     "url = os.getenv(\"CONVERSATION_HISTORY_URL\", \"http://localhost:8089/conversation-history\")\n",
