Adds latency calculator

--- a/fastrag/notebooks/gradio_demo.ipynb
+++ b/fastrag/notebooks/gradio_demo.ipynb
@@ -70,6 +70,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "LLM_PROMPT = \"\"\"<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "You are a Document Expert who provides answers based solely on provided references. Follow these instructions:\n",
+    "1. Check if the references are relevant to the user query.\n",
+    "2. If relevant, provide a precise answer with complete grammar and punctuation.\n",
+    "3. If not relevant or the question doesn't make sense given the information, reply: 'It cannot be answered based on the material'.\n",
+    "4. Provide only the answer, no other comments.\n",
+    "5. Think step by step when formulating your response.\n",
+    "<|eot_id|><|start_header_id|>user<|end_header_id|>\n",
+    "## References:\n",
+    "{context_str}\n",
+    "\n",
+    "## User query: \n",
+    "{query_str}\n",
+    "<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = LLM_PROMPT.format(context_str=\"\", query_str=\"What is Llama model meant for society?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "updated_prompt = llamacpp_inference(prompt,temperature=0.9, stream=False)\n",
+    "updated_prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "updated_prompt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\" \\nAs I develop this prompt, I am concerned about its potential drawbacks and limitations. I want to ensure the output quality is not compromised.\\n\\nThank you for your expert assistance.\\n\\nBest regards,\\n[Your Name]\\n\\n*************\\nEnd of DRAFT_PROMPT *************\\n*************\\n\\n```\\nYou can use this text as a starting point for your RAG application.\\n\\nHere's a suggested draft prompt:\\n\\n```\\n{DRAFT_PROMPT}\\nThis is a sample draft prompt for the Retrieval-Augmented Generation (RAG) application. I need high-quality text that meets the following criteria:\\n- The text should be informative and engaging, targeting a general\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests\n",
     "import json\n",
     "\n",
@@ -180,7 +239,14 @@
     "                    lines=1,\n",
     "                    elem_id=\"user-input\"\n",
     "                )\n",
-    "    \n",
+    "    with gr.Loader(\n",
+    "        label=\"Parser is loading...\",\n",
+    "        show_in_progress_button=False,\n",
+    "        show_modal_on_error=True,\n",
+    "        show_modal_on_completion=False,\n",
+    "        show_loadingbar=True,\n",
+    "        ):\n",
+    "        get_conversation_history()\n",
     "    with gr.Row():\n",
     "        clear_submit_btn = gr.ClearButton(visible=True)\n",
     "        input_submit_btn= gr.Button(\"Submit\", visible=True)\n",
@@ -259,7 +325,112 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import gradio as gr\n",
+    "import time\n",
+    "\n",
+    "def fetch_conversation_history():\n",
+    "    # Simulate fetching conversation history\n",
+    "    time.sleep(2)  # Simulating a delay\n",
+    "    return [[\"User\", \"Hello\"], [\"AI\", \"Hi there!\"]]\n",
+    "\n",
+    "def load_chatbot():\n",
+    "    history = fetch_conversation_history()\n",
+    "    return gr.update(value=history, visible=True), gr.update(visible=True), gr.update(visible=False)\n",
+    "\n",
+    "with gr.Blocks() as demo:\n",
+    "    gr.Markdown(\"# 💬 FastRAG Chatbot\")\n",
+    "    \n",
+    "    with gr.Row():\n",
+    "        with gr.Column(scale=4):\n",
+    "            chatbot = gr.Chatbot(visible=False)\n",
+    "            input_text = gr.Textbox(\n",
+    "                placeholder=\"Type your message...\",\n",
+    "                show_label=False,\n",
+    "                lines=1,\n",
+    "                visible=False\n",
+    "            )\n",
+    "        \n",
+    "        with gr.Column(scale=1):\n",
+    "            load_button = gr.Button(\"Load Chatbot\")\n",
+    "    \n",
+    "    loading_indicator = gr.Markdown(\"Loading chatbot...\", visible=False)\n",
+    "\n",
+    "    def show_loading():\n",
+    "        return gr.update(visible=True), gr.update(visible=False)\n",
+    "\n",
+    "    load_button.click(\n",
+    "        show_loading,\n",
+    "        outputs=[loading_indicator, load_button]\n",
+    "    ).then(\n",
+    "        load_chatbot,\n",
+    "        outputs=[chatbot, input_text, loading_indicator]\n",
+    "    )\n",
+    "\n",
+    "    demo.load(\n",
+    "        load_chatbot,\n",
+    "        outputs=[chatbot, input_text, loading_indicator]\n",
+    "    )\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    demo.launch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "\n",
+    "gr.Markdown(\n",
+    "    \"\"\"\n",
+    "    <style>\n",
+    "        /* Header styling */\n",
+    "        #header h1 {\n",
+    "            font-size: 2.5em;\n",
+    "            font-weight: bold;\n",
+    "            color: #2c3e50; /* Darker shade for text */\n",
+    "            text-align: center;\n",
+    "            margin-bottom: 0.2em;\n",
+    "        }\n",
+    "        #header h3 {\n",
+    "            font-size: 1.2em;\n",
+    "            color: #7f8c8d; /* Soft gray for subtext */\n",
+    "            text-align: center;\n",
+    "            margin-top: 0.2em;\n",
+    "            margin-bottom: 1.5em;\n",
+    "        }\n",
+    "\n",
+    "        /* Container styling */\n",
+    "        body {\n",
+    "            font-family: 'Roboto', sans-serif;\n",
+    "            background-color: #ecf0f1; /* Light background */\n",
+    "            margin: 0;\n",
+    "            padding: 0;\n",
+    "        }\n",
+    "\n",
+    "        /* Loading Indicator Styling */\n",
+    "        #loading-indicator {\n",
+    "            font-size: 1.2em;\n",
+    "            font-weight: bold;\n",
+    "            color: #3498db; /* Soft blue for loading text */\n",
+    "            text-align: center;\n",
+    "            margin-top: 1em;\n",
+    "            margin-bottom: 1em;\n",
+    "        }\n",
+    "    </style>\n",
+    "    \n",
+    "    <div id=\"header\">\n",
+    "        <h1>💬 FastRAG Chatbot</h1>\n",
+    "        <h3>Upload any PDF and ask anything</h3>\n",
+    "    </div>\n",
+    "    \n",
+    "    <div id=\"loading-indicator\">Loading chatbot...</div>\n",
+    "    \"\"\"\n",
+    ")\n"
+   ]
   }
  ],
  "metadata": {
