--- a/fastrag/notebooks/qdrant_sandbox.ipynb
+++ b/fastrag/notebooks/qdrant_sandbox.ipynb
@@ -178,6 +178,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_conversation_history(collection_name: str=\"qna_collection\", limit: int=10):\n",
+    "    try:\n",
+    "        url = os.getenv(\"CONVERSATION_HISTORY_URL\", \"http://localhost:8089/conversation-history\")\n",
+    "        payload = {\n",
+    "            \"collection_name\": collection_name,\n",
+    "            \"limit\": limit\n",
+    "        }\n",
+    "        response = requests.get(url, params=payload)\n",
+    "        conversation_history = response.json()[\"response\"]\n",
+    "\n",
+    "        chat_history = []\n",
+    "        for record in conversation_history:\n",
+    "            chat_history += [[record['user'], record['system']]]\n",
+    "        return chat_history\n",
+    "    except Exception as err:\n",
+    "        print(f\"Error in accessing conversation history from database: {err}\")\n",
+    "        return []\n",
+    "get_conversation_history()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests\n",
     "import os\n",
     "\n",
@@ -186,7 +212,7 @@
     "    \"collection_name\": \"qna_collection\",\n",
     "    \"limit\": 10\n",
     "}\n",
-    "response = requests.post(url, params=payload)\n",
+    "response = requests.get(url, params=payload)\n",
     "print(response.json())\n",
     "conversation_history = response.json()[\"response\"]"
    ]
