Bug fix for latency display

--- a/fastrag/notebooks/qdrant_sandbox.ipynb
+++ b/fastrag/notebooks/qdrant_sandbox.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qdrant_database.load_recent_responses(collection_name=collection_name, limit=10)"
+    "qdrant_database.load_recent_responses(collection_name=collection_name, limit=20)"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# qdrant_database.add_response(collection_name, \"what are you doing?\", \"I am studying\")\n",
-    "qdrant_database.add_response(collection_name, \"tell me about Nepal\", \"It is a beautiful country.\")"
+    "qdrant_database.add_response(collection_name, \"tell me about Bib\", \"It is a  country.\")"
    ]
   },
   {
