--- a/fastrag/notebooks/qdrant_sandbox.ipynb
+++ b/fastrag/notebooks/qdrant_sandbox.ipynb
@@ -37,7 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qdrant_database.load_recent_responses(collection_name=collection_name, limit=20)"
+    "\n",
+    "\n",
+    "# qdrant_database.qdrant_client.scroll(\n",
+    "#     collection_name=collection_name,\n",
+    "#     limit=100000,\n",
+    "#     order_by=\"id\"\n",
+    "# )"
    ]
   },
   {
@@ -46,8 +52,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "qdrant_database.load_recent_responses(collection_name=collection_name, limit=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# qdrant_database.add_response(collection_name, \"what are you doing?\", \"I am studying\")\n",
-    "qdrant_database.add_response(collection_name, \"tell me about Bib\", \"It is a  country.\")"
+    "qdrant_database.add_response(collection_name, \"tell me about Bib\", \"It is a  boy.\")"
    ]
   },
   {
