--- a/fastrag/notebooks/gradio_demo.ipynb
+++ b/fastrag/notebooks/gradio_demo.ipynb
@@ -6,6 +6,125 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import logging\n",
+    "import requests\n",
+    "from requests.exceptions import HTTPError, ConnectionError, Timeout, RequestException\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "logger = logging.getLogger(__name__)\n",
+    "\n",
+    "\n",
+    "def call_parse_api(file_path, index_id, splitting_type):\n",
+    "    url = os.getenv(\"PARSER_API_URL\", \"http://localhost:8089\") + \"/parse\"\n",
+    "    headers = {\n",
+    "        \"accept\": \"application/json\",\n",
+    "        # \"Content-Type\": \"multipart/form-data\",  # Explicit Content-Type\n",
+    "    }\n",
+    "    params = {\n",
+    "        \"index_id\": index_id,\n",
+    "        \"splitting_type\": splitting_type,\n",
+    "    }\n",
+    "    \n",
+    "    file_path = file_path[0]\n",
+    "    print(file_path)\n",
+    "    try:\n",
+    "        with open(file_path, 'rb') as file:\n",
+    "            files = {\n",
+    "                'file': (file_path, file, 'application/pdf')\n",
+    "            }\n",
+    "            print(file)\n",
+    "            response = requests.post(url, params=params, headers=headers, files=files)\n",
+    "            response.raise_for_status()\n",
+    "            \n",
+    "    except HTTPError as http_err:\n",
+    "        logger.warning(f\"HTTP error occurred: {http_err} (Status Code: {response.status_code})\")\n",
+    "    except ConnectionError as conn_err:\n",
+    "        logger.warning(f\"Connection error occurred: {conn_err}\")\n",
+    "    except Timeout as timeout_err:\n",
+    "        logger.warning(f\"Timeout error occurred: {timeout_err}\")\n",
+    "    except RequestException as req_err:\n",
+    "        logger.warning(f\"Request failed: {req_err}\")\n",
+    "    except Exception as general_err:\n",
+    "        logger.warning(f\"An unexpected error occurred: {general_err}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def call_parse_api(file_path, index_id, splitting_type):\n",
+    "    url = os.getenv(\"PARSER_API_URL\", \"http://localhost:8089\") + \"/parse\"\n",
+    "\n",
+    "    params = {\n",
+    "        \"index_id\": index_id,\n",
+    "        \"splitting_type\": splitting_type,\n",
+    "    }\n",
+    "\n",
+    "    headers = {\n",
+    "        'accept': 'application/json'\n",
+    "    }\n",
+    "\n",
+    "    file_path = file_path[0]\n",
+    "    with open(file_path, 'rb') as file:\n",
+    "        filename = os.path.basename(file_path)\n",
+    "        \n",
+    "        files = {\n",
+    "            'file': (filename, file, 'application/pdf')\n",
+    "        }\n",
+    "\n",
+    "        response = requests.post(url, params=params, headers=headers, files=files)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        return \"File succesfully Indexed and Loaded!!\"\n",
+    "    else:\n",
+    "        logger.error(f\"Error: {response.status_code}\")\n",
+    "        return \"Error: {response.status_code} \" + response.text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path=\"/home/bibekyess/yolo/plain_rag/FastRAG/fastrag/tests/llama2.pdf\"\n",
+    "call_parse_api([file_path], index_id=\"files\", splitting_type=\"raw\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = 'http://34.64.46.1:8089/parse'\n",
+    "params = {'index_id': 'files', 'splitting_type': 'raw'}\n",
+    "files = {'file': (file_path, open(file_path, 'rb'), 'application/pdf')}\n",
+    "\n",
+    "response = requests.post(url, params=params, files=files)\n",
+    "\n",
+    "print(response.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests\n",
     "import json\n",
     "\n",
